--- a/index.html
+++ b/index.html
@@ -1,62 +1,29 @@
-
 <!DOCTYPE html>
 <html lang="vi">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lịch làm việc - UBND TP Cần Thơ</title>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Lịch làm việc - UBND TP Cần Thơ</title>
 
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
-  <style>
-    body {
-      font-family: 'Inter', sans-serif;
-    }
-    /* Smooth scroll for the whole app */
-    html {
-      scroll-behavior: smooth;
-    }
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap"
+      rel="stylesheet"
+    />
 
-    @media print {
-      header, .print-hide, button, .fixed, .ai-assistant {
-        display: none !important;
-      }
+    <style>
       body {
-        background: white !important;
-        padding: 0 !important;
+        font-family: 'Inter', sans-serif;
       }
-      main {
-        max-width: 100% !important;
-        margin: 0 !important;
-        padding: 0 !important;
+      html {
+        scroll-behavior: smooth;
       }
-      .bg-white {
-        border: none !important;
-        box-shadow: none !important;
-      }
-      .bg-slate-50\/50 {
-        background-color: #f8fafc !important;
-        -webkit-print-color-adjust: exact;
-      }
-      .text-red-600 {
-        color: #dc2626 !important;
-        -webkit-print-color-adjust: exact;
-      }
-    }
-  </style>
-<script type="importmap">
-{
-  "imports": {
-    "@google/genai": "https://esm.sh/@google/genai@^1.34.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "framer-motion": "https://esm.sh/framer-motion@^11.11.10"
-  }
-}
-</script>
-</head>
-<body>
-  <div id="root"></div>
-</body>
+    </style>
+  </head>
+
+  <body>
+    <div id="root"></div>
+
+    <!-- ⚠️ BẮT BUỘC PHẢI CÓ -->
+    <script type="module" src="/src/index.tsx"></script>
+  </body>
 </html>
