--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
     <div id="root"></div>
 
     <!-- ⚠️ BẮT BUỘC PHẢI CÓ -->
-    <script type="module" src="/src/index.tsx"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
